@@ -25,7 +25,7 @@ package gc.z;
 
 /**
  * @test TestZForceDiscontiguousHeapReservations
- * @requires vm.gc.ZGenerational & vm.debug
+ * @requires vm.gc.Z & vm.debug
  * @summary Test the ZForceDiscontiguousHeapReservations development flag
  * @library /test/lib
  * @run driver gc.z.TestZForceDiscontiguousHeapReservations
@@ -45,17 +45,16 @@ public class TestZForceDiscontiguousHeapReservations {
          */
         final int XmxInM = 2000;
         final int XmsInM = Math.min(16 * XmxInM / (n + 1), XmxInM);
-        OutputAnalyzer oa = ProcessTools.executeProcess(ProcessTools.createTestJavaProcessBuilder(
-                                                        "-XX:+UseZGC",
-                                                        "-XX:+ZGenerational",
-                                                        "-Xms" + XmsInM + "M",
-                                                        "-Xmx" + XmxInM + "M",
-                                                        "-Xlog:gc,gc+init",
-                                                        "-XX:ZForceDiscontiguousHeapReservations=" + n,
-                                                        "-version"))
-                                        .outputTo(System.out)
-                                        .errorTo(System.out)
-                                        .shouldHaveExitValue(0);
+        OutputAnalyzer oa = ProcessTools.executeTestJava(
+            "-XX:+UseZGC",
+            "-Xms" + XmsInM + "M",
+            "-Xmx" + XmxInM + "M",
+            "-Xlog:gc,gc+init",
+            "-XX:ZForceDiscontiguousHeapReservations=" + n,
+            "-version")
+                .outputTo(System.out)
+                .errorTo(System.out)
+                .shouldHaveExitValue(0);
         if (n > 1) {
             oa.shouldContain("Address Space Type: Discontiguous");
         }
