@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,13 +23,12 @@
 
 /*
  * @test
- * @bug 8007038 8247781
- * @summary Verify ArrayIndexOutOfBoundsException is not thrown on
+ * @bug 8007038 8247781 8174269
+ * @summary Verify ArrayIndexOutOfBoundsException is not thrown
  *     on calling localizedDateTime().print() with JapaneseChrono
  * @modules java.base/sun.util.locale.provider
  * @modules jdk.localedata
  * @compile -XDignore.symbol.file Bug8007038.java
- * @run main/othervm -Djava.locale.providers=COMPAT Bug8007038 COMPAT
  * @run main/othervm -Djava.locale.providers=CLDR Bug8007038 CLDR
  */
 
