@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,7 +22,7 @@
  */
 
  /*
- * @test 8151754 8080883 8160089 8170162 8166581 8172102 8171343 8178023 8186708 8179856 8185840 8190383
+ * @test 8151754 8080883 8160089 8170162 8166581 8172102 8171343 8178023 8186708 8179856 8185840 8190383 8341631
  * @summary Testing startExCe-up options.
  * @modules jdk.compiler/com.sun.tools.javac.api
  *          jdk.compiler/com.sun.tools.javac.main
@@ -81,7 +81,7 @@ public class StartOptionTest {
     protected int runShell(String... args) {
         try {
             return builder()
-                    .start(args);
+                    .start(Presets.addExecutionIfMissing(args));
         } catch (Exception ex) {
             fail("Repl tool died with exception", ex);
         }
@@ -122,6 +122,13 @@ public class StartOptionTest {
         check(cmdout, checkCmdOutput, "cmdout");
         check(cmderr, checkError, "cmderr");
         check(console, checkConsole, "console");
+        check(userout, checkUserOutput, "userout");
+        check(usererr, null, "usererr");
+    }
+
+    protected void startCheckUserOutput(Consumer<String> checkUserOutput,
+            String... args) {
+        runShell(args);
         check(userout, checkUserOutput, "userout");
         check(usererr, null, "usererr");
     }
@@ -356,6 +363,52 @@ public class StartOptionTest {
                 null,
                 s -> assertTrue(s.trim().startsWith("jshell>"), "Expected prompt, got: " + s),
                 "--show-version");
+    }
+
+    public void testPreviewEnabled() {
+        String fn = writeToFile(
+                """
+                System.out.println(\"prefix\");
+                System.out.println(MethodHandle.class.getName());
+                System.out.println(\"suffix\");
+                /exit
+                """);
+        startCheckUserOutput(s -> assertEquals(s, "prefix\nsuffix\n"),
+                             fn);
+        startCheckUserOutput(s -> assertEquals(s, "prefix\njava.lang.invoke.MethodHandle\nsuffix\n"),
+                             "--enable-preview", fn);
+        //JDK-8341631:
+        String fn2 = writeToFile(
+                """
+                System.out.println(\"prefix\");
+                IO.println(\"test\");
+                System.out.println(\"suffix\");
+                /exit
+                """);
+        startCheckUserOutput(s -> assertEquals(s, "prefix\nsuffix\n"),
+                             fn2);
+        startCheckUserOutput(s -> assertEquals(s, "prefix\ntest\nsuffix\n"),
+                             "--enable-preview", fn2);
+    }
+    public void testInput() {
+        //readLine(String):
+        String readLinePrompt = writeToFile(
+                """
+                var v = System.console().readLine("prompt: ");
+                System.out.println(v);
+                /exit
+                """);
+        startCheckUserOutput(s -> assertEquals(s, "prompt: null\n"),
+                             readLinePrompt);
+        //readPassword(String):
+        String readPasswordPrompt = writeToFile(
+                """
+                var v = System.console().readPassword("prompt: ");
+                System.out.println(java.util.Arrays.toString(v));
+                /exit
+                """);
+        startCheckUserOutput(s -> assertEquals(s, "prompt: null\n"),
+                             readPasswordPrompt);
     }
 
     @AfterMethod
